--- a/stolen-bikes-index-client-app/package.json
+++ b/stolen-bikes-index-client-app/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/axios": "0.14.0",
     "@types/jest": "24.0.11",
     "@types/jquery": "^3.3.29",
     "@types/node": "11.13.0",
     "@types/react": "16.8.10",
     "@types/react-datepicker": "^2.2.0",
     "@types/react-dom": "16.8.3",
+    "axios": "0.18.0",
     "bootstrap": "^4.3.1",
     "create-react-class": "^15.6.3",
     "jquery": "^3.3.1",
