--- a/stolen-bikes-index-client-app/package.json
+++ b/stolen-bikes-index-client-app/package.json
@@ -1,38 +1,46 @@
 {
-  "name": "stolen-bikes-index-client-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/axios": "0.14.0",
-    "@types/jest": "24.0.11",
-    "@types/jquery": "^3.3.29",
-    "@types/node": "11.13.0",
-    "@types/react": "16.8.10",
-    "@types/react-datepicker": "^2.2.0",
-    "@types/react-dom": "16.8.3",
-    "axios": "0.18.0",
-    "bootstrap": "^4.3.1",
-    "create-react-class": "^15.6.3",
-    "jquery": "^3.3.1",
-    "react": "^16.8.6",
-    "react-datepicker": "^2.3.0",
-    "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8",
-    "typescript": "3.4.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "name": "stolen-bikes-index-client-app",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@types/axios": "0.14.0",
+        "@types/jest": "24.0.11",
+        "@types/jquery": "3.3.29",
+        "@types/node": "11.13.0",
+        "@types/react": "16.8.10",
+        "@types/react-bootstrap": "0.32.17",
+        "@types/react-datepicker": "^2.2.0",
+        "@types/react-dom": "16.8.3",
+        "@types/react-paginate": "6.2.1",
+        "axios": "0.18.0",
+        "bootstrap": "^4.3.1",
+        "create-react-class": "^15.6.3",
+        "jquery": "3.3.1",
+        "npm": "6.9.0",
+        "react": "^16.8.6",
+        "react-bootstrap": "1.0.0-beta.6",
+        "react-datepicker": "^2.3.0",
+        "react-dom": "^16.8.6",
+        "react-paginate": "6.3.0",
+        "react-scripts": "2.1.8",
+        "tslint": "5.15.0",
+        "tslint-react": "4.0.0",
+        "typescript": "3.4.1"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "lint": "tslint --fix -c tslint.json 'src/**/*.{ts,tsx}'"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ]
 }
