Added TSLint and UT Cases

--- a/stolen-bikes-index-client-app/package.json
+++ b/stolen-bikes-index-client-app/package.json
@@ -4,7 +4,6 @@
     "private": true,
     "dependencies": {
         "@types/axios": "0.14.0",
-        "@types/jest": "24.0.11",
         "@types/jquery": "3.3.29",
         "@types/node": "11.13.0",
         "@types/react": "16.8.10",
@@ -15,6 +14,7 @@
         "axios": "0.18.0",
         "bootstrap": "^4.3.1",
         "create-react-class": "^15.6.3",
+        "jest": "^23.6.0",
         "jquery": "3.3.1",
         "npm": "6.9.0",
         "react": "^16.8.6",
@@ -23,6 +23,7 @@
         "react-dom": "^16.8.6",
         "react-paginate": "6.3.0",
         "react-scripts": "2.1.8",
+        "ts-jest": "^24.0.2",
         "tslint": "5.15.0",
         "tslint-react": "4.0.0",
         "typescript": "3.4.1"
@@ -32,7 +33,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "lint": "tslint --fix -c tslint.json 'src/**/*.{ts,tsx}'"
+        "lint": "tslint --fix -c tslint.json 'src/**/*.{ts,tsx}' -e 'src/serviceworker.ts'"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -42,5 +43,26 @@
         "not dead",
         "not ie <= 11",
         "not op_mini all"
-    ]
+    ],
+    "devDependencies": {
+        "@types/enzyme": "^3.9.1",
+        "@types/enzyme-adapter-react-16": "^1.0.5",
+        "@types/jest": "^24.0.11",
+        "enzyme": "^3.9.0",
+        "enzyme-adapter-react-16": "^1.12.1",
+        "enzyme-to-json": "^3.3.5",
+        "jest-enzyme": "^7.0.2",
+        "jest-html-reporter": "^2.5.0",
+        "react-test-renderer": "^16.8.6"
+    },
+    "jest": {
+        "snapshotSerializers": [
+            "enzyme-to-json/serializer"
+        ],
+        "coverageReporters": [
+            "text",
+            "html"
+        ],
+        "collectCoverageFrom": ["**/*.{ts,tsx}","!src/serviceWorker.ts", "!src/setupEnzyme.ts"]
+    }
 }
