adding Unit test cases

--- a/stolen-bikes-index-client-app/package.json
+++ b/stolen-bikes-index-client-app/package.json
@@ -63,6 +63,6 @@
             "text",
             "html"
         ],
-        "collectCoverageFrom": ["**/*.{ts,tsx}","!src/serviceWorker.ts", "!src/setupEnzyme.ts"]
+        "collectCoverageFrom": ["**/*.{ts,tsx}","!src/serviceWorker.ts", "!src/setupEnzyme.ts", "!src/index.tsx"]
     }
 }
