--- a/stolen-bikes-index-client-app/package.json
+++ b/stolen-bikes-index-client-app/package.json
@@ -14,6 +14,7 @@
         "axios": "0.18.0",
         "bootstrap": "^4.3.1",
         "create-react-class": "^15.6.3",
+        "gh-pages": "^2.0.1",
         "jest": "^23.6.0",
         "jquery": "3.3.1",
         "npm": "6.9.0",
@@ -29,6 +30,8 @@
         "typescript": "3.4.1"
     },
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -b master -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -63,6 +66,12 @@
             "text",
             "html"
         ],
-        "collectCoverageFrom": ["**/*.{ts,tsx}","!src/serviceWorker.ts", "!src/setupEnzyme.ts", "!src/index.tsx"]
-    }
+        "collectCoverageFrom": [
+            "**/*.{ts,tsx}",
+            "!src/serviceWorker.ts",
+            "!src/setupEnzyme.ts",
+            "!src/index.tsx"
+        ]
+    },
+    "homepage": "https://snehangshuchatterjee.github.io"
 }
